- MPLUS data improvement - Added score progress and group leaderboard - Dungeon coverage and vault history - Observed run performance - Advanced metric and fun awards - Personal/Group mplus score